<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="editKey"
            app:title="@string/title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="소녀시대"
            app:entries="@array/list_entries"
            app:entryValues="@array/list_values"
            app:key="listKey"
            app:title="@string/list_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notify_header">

        <SwitchPreferenceCompat
            app:key="notify"
            app:title="@string/notify_title" />

        <SwitchPreferenceCompat
            app:dependency="notify"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <Preference
        android:title="New Screen"
        app:fragment="kr.co.material.basic.remainder.SubSettingsFragment"/>
    <Preference
        app:key="dialog"
        app:title="대화상자" />
</PreferenceScreen>